# introns

./: README.md  data.sh
intron_stats/: pyproject.toml
intron_stats/intron_stats/: cli.py
intron_stats/tests/: test_intron_stats.py
original_pipeline/: classify-splice-sites.py  test_classify_splice_sites.py  test_data.csv
preprocess/: Cargo.toml  description.txt
preprocess/src/: extractor.rs  main.rs  organisms.rs  types.rs  utils.rs
preprocess/src/features/: extractor.rs  io.rs  mod.rs
preprocess/src/introns/: csv.rs  extractor.rs  mod.rs
preprocess/src/positions/: extractor.rs  io.rs  mod.rs
preprocess/src/samples/: extractor.rs  io.rs
thesis/: .gitignore  README.md  ociamthesis.cls  references.bib  thesis.tex
thesis/text/: abbreviations.tex  abstract.tex  acknowledgements.tex  automation.tex  background.tex  conclusion.tex  current-research.tex  data.tex  declaration.tex  evaluation.tex  intro.tex  motivation.tex  rcnn.tex
training/: correlation.py  count.py  data.py  dataset.py  evaluate.py  intron-dist-fp.py  intron-len-fn.py  loader.py  lossplot.py  position-dependence.py  predict-samples.py  progress.py  pyproject.toml  report.py  show-loss-plot.py  test_loader.py  train.py
