[tool.poetry]
name = "intron-stats"
version = "0.1.0"
description = ""
authors = ["Martin Indra <martin.indra@mgn.cz>"]

[tool.poetry.scripts]
intron-stats = 'intron_stats.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
docopt = "~0.6.2"
pandas = "~1.1.3"
numpy = "~1.19.2"
matplotlib = "~3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
